--- a/app/src/main/res/layout/item_eyepetizer_daily.xml
+++ b/app/src/main/res/layout/item_eyepetizer_daily.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginTop="10dp"
+    android:paddingStart="5dp"
+    android:paddingTop="10dp"
+    android:paddingEnd="5dp"
+    android:visibility="gone"
     android:orientation="vertical">
 
     <FrameLayout
